--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Drawing App</string>
     <string name="brush_size_dialog_title">Select brush size</string>
+    <string name="brush_color_dialog_title">Select brush color</string>
     <string name="cd_open_brush_size">Open brush size selector</string>
 </resources>
