--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="sb_perm_unknown">Permission %1$s unknown.</string>
     <string name="res_save_file">File saved as %1$s.</string>
     <string name="res_save_failed">Failed to save bitmap file.</string>
+    <string name="label_loading">Loading...</string>
 </resources>
